--- a/main.css
+++ b/main.css
@@ -674,6 +674,11 @@ a {
     opacity: 1;
 }
 @media (max-width: 1700px) {
+    .menu{
+        position: fixed;
+        top: 20%;
+        width:  15%;
+    }
     .img_Icon_Autorh_InPlayers_Open {
         width: 300px;
         height: 300px;
