--- a/main.css
+++ b/main.css
@@ -297,6 +297,7 @@ a {
     height: 37%;
 }
 .autorPage_Div_Music_Content_Music_Play_Img {
+    margin-left: 2vw;
     width: 80px;
     height: 85px;
     flex-shrink: 0;
@@ -451,9 +452,17 @@ margin-left: 60px;
 .autorPage_Div_Music_Li {
     display: grid;
     grid-template-rows: 100%;
-    grid-template-columns: 8% 6% 10% 40% 20%;
+    grid-template-columns: 10% 6% 50% 20% 20%;
     height: 60px;
     padding-left: 0;
+}
+.saveSongsButton{
+    background: none;
+    border: 0px;
+}
+.saveSongsImg{
+    height: 30px;
+    width: 30px;
 }
 .autorPage_Div_Music_Play_Button_Img_Songs {
     background: none;
@@ -854,6 +863,10 @@ margin-left: 60px;
     margin-top: 0.45vh;
 }
 @media (max-width: 800px) {
+    .saveSongsImg{
+        height: 25px;
+        width: 25px;
+    }
     .img_Icon_Autorh_InPlayers_Open {
         width: 150px;
         height: 150px;
@@ -981,6 +994,10 @@ margin-left: 60px;
     }
 }
 @media (max-width: 600px) {
+    .saveSongsImg{
+        height: 15px;
+        width: 15px;
+    }
     .head{ 
         left: 30px;
        width: 100%;
@@ -1081,7 +1098,7 @@ margin-left: 60px;
         width: 60vw;
     }
     .autorPage_Div_Music_Content_Music_Play_Img {
-        margin-left: -5vw;
+        
         width: 15px;
         height: 15px;
     }
@@ -1100,7 +1117,7 @@ margin-left: 60px;
     }
     .autorPage_Div_Music_Play_Img_Songs {
         margin-top: 0.5vh;
-        margin-left: -5vw;
+       
         width: 25px;
         height: 25px;
     }
