--- a/Code/code.css
+++ b/Code/code.css
@@ -5,7 +5,7 @@
 }
 body{
   
-  background:url("./img/backgroundRegister.png") no-repeat center center fixed;
+  background:url("../img/backgroundRegister.png") no-repeat center center fixed;
   background-size: cover;
 }
 .main{
