--- a/Login/login.css
+++ b/Login/login.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body {
-    background: url('./img/backgroundRegister.png') no-repeat center center
+    background: url('../img/backgroundRegister.png') no-repeat center center
         fixed;
     background-size: cover;
 }
