--- a/Register/regist.css
+++ b/Register/regist.css
@@ -5,7 +5,7 @@
 }
 body {
   height: 100vh;
-  background: url("./img/backgroundRegister.png") no-repeat center center fixed;
+  background: url("../img/backgroundRegister.png") no-repeat center center fixed;
   background-size: cover;
   overflow: hidden;
 }
