--- a/Main/main.css
+++ b/Main/main.css
@@ -20,7 +20,13 @@ body {
 			rgba(58, 2, 53, 0) 100%
 		),
 		rgba(0, 0, 0, 0.2);
-	position: absolute;
+	position: fixed;
+		display: flex;
+	justify-content: end;
+	align-items: center;
+}
+.supportText{
+	animation: marquee 7s infinite linear;
 }
 .main {
 	
@@ -59,7 +65,8 @@ position: relative;
 	padding-top: 60px;
 	display: flex;
 	justify-content: center;
-	font-size: 37px;
+	padding-bottom: 100px;
+	font-size: 30px;
 	color: #ffc7c7;
 	background: linear-gradient(
 		180deg,
@@ -292,6 +299,7 @@ a {
 	transition-duration: 0.5s;
 }
 .mainPage_Autor_Card_Img {
+	border-radius: 25px;
 	width: 148px;
 	height: 160px;
 	flex-shrink: 0;
@@ -339,6 +347,7 @@ a {
 	color: #ffc7c7;
 }
 .mainPage_Autor_Card_Img_Button:hover div {
+		border-radius: 25px;
 	position: absolute;
 	width: 148px;
 	height: 160px;
@@ -503,7 +512,9 @@ a {
 	width: 100%;
 }
 .autorPage_Div_Music_Content_Music_Play_Button {
-	background: 0;
+	padding-top: 15px;
+	height: 100%;
+	background: none;
 	border: 0;
 }
 .autorPage_Div_Music_Content_Music_Play_Img {
@@ -658,6 +669,7 @@ a {
 	grid-area: range_Audio;
 }
 .buttons_Players_Music {
+
 	grid-area: buttons_Players_Music;
 	margin-top: 0;
 }
@@ -710,17 +722,17 @@ a {
 }
 .next_Song_Img {
 	margin-left: 0px;
-	width: 100%;
-	height: 100%;
+	width:30px;
+	height:30px;
 }
 .previous_Song_Img {
-	width:25px;
-	height:25px;
+	width:30px;
+	height:30px;
 }
 .buttons_Players_Music {
 	grid-area: buttons_Players_Music;
 	display: flex;
-	margin-left: 0px;
+	
 }
 .textPlayers{
 	grid-area: textPlayersMusic;
@@ -728,14 +740,14 @@ a {
 	white-space:nowrap;
 	overflow: hidden;
 	color: #ffc7c7;
-	
+
 }
 .textPlayersMusic{
 	
 	color: #ffc7c7;
 	animation: marquee 10s infinite linear;
 }
-	
+
 	
 	
 	@-webkit-keyframes marquee {
@@ -860,6 +872,12 @@ a {
 		width: 300px;
 		height: 300px;
 	}
+	.mainPage_Autor_Card_Img{
+   width: 120px;
+height: 130px;
+	}
+	.mainPage_Autor_Card_Img_Button:hover div {   width: 120px;
+		height: 130px;}
 }
 
 @media (max-width: 1300px) {
@@ -1067,6 +1085,7 @@ a {
 		height: 25px;
 	}
 	.buttons_Players_Music {
+padding-left: auto;
 		margin-top: 0;
 	}
 	.switch_Menu_Song_Img {
@@ -1134,7 +1153,7 @@ a {
 	.SubtitlesSongOpen{
 		padding-top: 40px;
 		height: auto;
-		font-size: 11px;
+		font-size: 8px;
 		margin-left: 2px;
 		padding-bottom: 10px;
 	}
