--- a/Login/login.css
+++ b/Login/login.css
@@ -17,8 +17,7 @@ body {
 .main {
     height: 100vh;
     width: 100vw;
-    position: absolute;
-    display: flex;
+       display: flex;
     flex-direction: column;
     align-self: center;
     align-items: center;
@@ -119,4 +118,43 @@ input {
     height: 40px;
     border-radius: 100%;
     background-color: #45063b;
+}
+@media (max-width:800px){
+    .bottomLine {
+        position: relative;
+        bottom: 200px;
+        background: #ffc7c7;
+        width: 300px;
+    }
+    .input_Style {
+        color: #ffc7c7;
+        width: 300px;
+        height: 53px;   
+        flex-shrink: 0;
+        border: 0px;
+        font-size: 15px;
+        padding:20px;
+        box-sizing: border-box;
+        border-radius: 15px;
+        background: linear-gradient(
+                180deg,
+                rgba(58, 2, 53, 0.8) 0%,
+                rgba(58, 2, 53, 0.28) 99.99%,
+                rgba(58, 2, 53, 0) 100%
+            ),
+            rgba(0, 0, 0, 0.2);
+    }
+    .registtext{
+        margin-left: 100px;
+    }
+    .registline {
+        margin-left: 100px;
+    }
+    .line {
+        position: relative;
+        bottom: 22px;
+        left: 15px;
+        background: #ffc7c7;
+        width: 270px;
+    }
 }
