--- a/Register/regist.css
+++ b/Register/regist.css
@@ -126,3 +126,44 @@ height:40px;
   border-radius:100%;
   background-color:#45063B;
 }
+@media (max-width:800px){
+  .bottomLine {
+    position: relative;
+    bottom: 200px;
+    background: #ffc7c7;
+    width: 300px;
+}
+.input_Style {
+    color: #ffc7c7;
+    width: 300px;
+    height: 53px;   
+    flex-shrink: 0;
+    border: 0px;
+    font-size: 15px;
+    padding:20px;
+    margin-left: 80px;
+    box-sizing: border-box;
+    border-radius: 15px;
+    background: linear-gradient(
+            180deg,
+            rgba(58, 2, 53, 0.8) 0%,
+            rgba(58, 2, 53, 0.28) 99.99%,
+            rgba(58, 2, 53, 0) 100%
+        ),
+        rgba(0, 0, 0, 0.2);
+}
+.registtext{
+    margin-left: 100px;
+}
+.registline {
+    margin-left: 100px;
+}
+.line {
+    position: relative;
+    bottom: 22px;
+    left: 95px;
+
+    background: #ffc7c7;
+    width: 270px;
+}
+}
