--- a/Main/main.css
+++ b/Main/main.css
@@ -334,7 +334,7 @@ a {
 .mainPage_Autor_Card_Autor_Name {
 	margin: -50px;
 	color: none;
-	left: 20%;
+	left:9%;
 	font-family: Inter;
 	font-size: 15px;
 	font-style: normal;
@@ -949,11 +949,11 @@ height: 130px;
 		flex-shrink: 0;
 	}
 	.mainPage_Autor_Card_Autor_Name {
-		margin: -50px;
+		margin-top: -50px;
 		color: none;
-		left: 20%;
+		left: 0%;
 		font-family: Inter;
-		font-size: 11px;
+		font-size: 10px;
 	}
 	.mainPage_Autor_Card_Img_Button:hover div {
 		width: 108px;
@@ -964,8 +964,13 @@ height: 130px;
 		width: 200px;
 		height: 200px;
 	}
+	.mainPage_Autor_Card_Autor_Name{
+		font-size: 10px;
+		margin-left: 0;
+	}
 }
 @media (max-width: 1100px) {
+	
 	.autorPage_Div_Music_Li {
 		width: 95%;
 		margin-left: 0%;
@@ -1034,6 +1039,8 @@ height: 130px;
 }
 
 @media (max-width: 800px) {
+	.autorPage_Div_Music_Content_Music_Play_Button {
+		padding-top: 12px;}
 	.alertImg {
 	
 		border-radius: 5px;
@@ -1247,6 +1254,13 @@ padding-left: auto;
 	.buttonSubtitlesSong{
 		grid-area: buttonSubtitlesSong;
 	}
+	.autorPage_Div_Music_Content_Music_Play_Img {
+		margin-top: 0px;
+	}
+	.autorPage_Div_Music_Content_Music_Play_Button {
+	
+		margin-top: 0px;
+	}
 }
 @media (max-width: 600px) {
 	.autorPage_Head_Autor_Content_Img_Slider {
@@ -1389,7 +1403,8 @@ padding-left: auto;
 		margin-top: 70px;
 	}
 	.autorPage_Div_Music_Content_line {
-		width: 20px;
+		margin-left:-20px;
+		width: 275px;
 	}
 	.autorPage_Div_Music_Content {
 		padding-left: 0px;
@@ -1402,7 +1417,9 @@ padding-left: auto;
 	}
 	.autorPage_Div_Music_Content_Music_Play_Button {
 		margin-left: 0px;
+		
 	}
+
 	.autorPage_Div_Music_Li {
 		margin-top: 5px;
 		display: grid;
@@ -1555,3 +1572,65 @@ padding-left: auto;
 		margin-left: auto;
 	}
 }
+
+
+
+
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed);
+
+
+
+.loader {
+  position: relative;
+  margin: auto;
+  width: 210px;
+  color: white;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 250%;
+  margin-top: 25vh;
+
+  
+}
+
+.loader:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+span {
+  float: left;
+  height: 100px;
+  line-height: 120px;
+  width: 50px;
+}
+
+.loader > span {
+  border-left: 1px solid #444;
+ 
+}
+
+.covers {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.covers span {
+  background: linear-gradient(180deg, white 0, #ddd 100%);
+  animation: up 2s infinite;
+}
+
+@keyframes up {
+  0%   { margin-bottom: 0; }
+  16%  { margin-bottom: 100%; height: 20px; }
+  50% { margin-bottom: 0; }
+  100% { margin-bottom: 0; }
+}
+
+.covers span:nth-child(2) { animation-delay: .142857s; }
+.covers span:nth-child(3) { animation-delay: .285714s; }
+.covers span:nth-child(4) { animation-delay: .428571s; }
+.covers span:nth-child(5) { animation-delay: .571428s; }
+.covers span:nth-child(6) { animation-delay: .714285s; }
+.covers span:nth-child(7) { animation-delay: .857142s; }
